# various versions dating all the way back from the very beginning.
|| Version 1.43.3 changes ||
  * Sun Dec 5 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a crash that occured when compression was enabled while configuring a
      one-time backup
    - Correct the crontab cleaning algorithm to work with full paths (as we do
      with PyCron on Windows)
  
  * Tue Nov 30 2010 Stewart Adam <s.adam at diffingo.com>
    - Further fixes regarding string encoding; fixes backup sets with diacritics
      and/or special characters in their names
    - Use mkstemp to create temporary package list files for better Python 2.4
      compatability
  
  * Sun Nov 28 2010 Stewart Adam <s.adam at diffingo.com>
    - Encode strings with the appropriate encoding when dealing with the OS
      filesystem or shell processes; fixes bug when backing up paths with
      special characters in them
    - Fix a bug that would occur when importing old set configurations
    - Fix a problem where list files where not backed up when using a remote destination

|| Version 1.43.3rc6 changes ||
  * Thu Oct 28 2010 Stewart Adam <s.adam at diffingo.com>
    - Update documentation for 1.43.3rc6
  
  * Sat Oct 18 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a multi-user conflict where several backups could attempt to create
      the package list file(s) simultaneously, causing one of the two backups to
      fail
    - Fixed a bug that prevented fwbackups from importing pre-1.43.2beta3
      configuration files
    - Offer to initialize a new configuration file if the existing one does not
      pass validation
    
  * Sat Oct 9 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem where excessive stderr output in subprocesses would cause
      fwbackups to hang. The file currently being backed up can no longer be
      displayed.
  
  * Sat Oct 2 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a bug where subdirectories could not be created in a direct copy