@@ -26,6 +26,10 @@ import signal
 from fwbackups.i18n import _, encode, decode
 from fwbackups.const import *
 
+if sys.platform.startswith('win'):
+  sys.path.insert(0, os.path.join(INSTALL_DIR, "pythonmodules"))
+  sys.path.insert(1, os.path.join(INSTALL_DIR, "pythonmodules", "gtk-2.0"))
+
 import fwbackups
 from fwbackups.operations import backup
 from fwbackups import config
